# constraint_classification

./: .gitignore  README.md
doc/source/: conf.py  index.rst  modules.rst  predicate_classification.rst  test.rst
predicate_classification/: CMakeLists.txt  README.md  package.xml  setup.py
predicate_classification/deprecated/include/predicate_classification/: predicate_classifiers.h
predicate_classification/deprecated/src/: classification_exception.cpp  predicate_classifiers.cpp
predicate_classification/deprecated/test/: predicate_classification.test  predicate_classification_service_test.cpp  predicate_classifiers.test  predicate_classifiers_test.cpp
predicate_classification/include/predicate_classification/: classifcation_exception.h  predicate_classifiers.h
predicate_classification/nodes/: predicate_classification_server.py
predicate_classification/scripts/: predicate_classification_client.py  upright_classification_tester.py
predicate_classification/src/: predicate_classification_service.cpp  predicate_classifiers.cpp
predicate_classification/src/predicate_classification/: path_classifiers.py  pose_classifiers.py  predicate_classifiers.py  utils.py
predicate_classification/src/test/: path_classifiers.test  pose_classifiers.test  predicate_classification_server.test  predicate_classifiers.test  test_path_classifiers.py  test_path_classifiers.test  test_pose_classifiers.py  test_predicate_classification_server.py  test_predicate_classifiers.py
predicate_classification/test/: predicate_classification.test  predicate_classification_server.test  predicate_classification_server_test.py  predicate_classification_service_test.cpp  predicate_classifiers.test  predicate_classifiers_test.cpp  predicate_classifiers_test.py
predicate_classification_msgs/: CMakeLists.txt  README.md  package.xml
predicate_classification_msgs/msg/: Height.msg  Proximity.msg  Upright.msg
predicate_classification_msgs/srv/: PredicateClassification.srv
predicate_classification_python/: CMakeLists.txt  package.xml  setup.py
predicate_classification_python/scripts/: tester.py
predicate_classification_python/src/: classifiers.cpp
predicate_classification_python/temp/: binary_classifiers.py  predicate_classification_server.py
