<?xml version="1.0"?>
<package format="2">
  <name>predicate_classification_msgs</name>
  <version>0.0.0</version>
  <description>The predicate_classification_msgs package</description>
  <maintainer email="camu7177@colorado.edu">Carl Mueller</maintainer>
  <license>MIT</license>


  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>geometry_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>rostest</build_depend>

  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  
  <test_depend>rosunit</test_depend>
  <test_depend>rostest</test_depend>

</package>
