<?xml version="1.0"?>
<package format="2">
  <name>predicate_classification_python</name>
  <version>0.0.1</version>
  <description>
  predicate_classification_python exports python bindings for predicate_classification.
  </description>

  <maintainer email="carl.mueller@colorado.edu">Carl Mueller</maintainer>
  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>python_module</build_depend>

  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>message_runtime</depend>
  <depend>predicate_classification</depend>
  <depend>predicate_classification_msgs</depend>

</package>